[package]
name = "dtch"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Martin Skou Drewes"]
description = "A minimal dtach-style terminal session runner"
readme = "README.md"
repository = "https://github.com/martinskou/dtch"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.29", features = ["fs", "process", "term"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
